#ifndef BRIDGEDEMO_IPASSENGERTRANSPORTATION_H
#define BRIDGEDEMO_IPASSENGERTRANSPORTATION_H


class IPassengerTransportation {
public:
    virtual void Boarding() = 0;
    virtual void Unboarding() = 0;
};


#endif //BRIDGEDEMO_IPASSENGERTRANSPORTATION_H
