#ifndef BRIDGEDEMO_TRANSPORT_H
#define BRIDGEDEMO_TRANSPORT_H


class Transport {
public:
    virtual void Move() = 0;
};


#endif //BRIDGEDEMO_TRANSPORT_H
