@startuml
'https://plantuml.com/class-diagram

abstract class Transport {
+ {abstract} Move() : void
}

Transport <|-- MotorTransport
abstract class MotorTransport {
+ Move() : void
}

Transport <|-- AirTransport
abstract class AirTransport {
+ Move() : void
}

interface ICargoTransportation {
+ {abstract} Loading() : void
+ {abstract} Unloading() : void
}

interface IPassengerTransportation {
+ {abstract} Boarding() : void
+ {abstract} Unboarding() : void
}

MotorTransport <|-- Bus
IPassengerTransportation <|.. Bus
class Bus {
+ Boarding() : void
+ Unboarding() : void
}

MotorTransport <|-- Truck
ICargoTransportation <|.. Truck
class Truck {
+ Loading() : void
+ Unloading() : void
}


AirTransport <|-- AirBus
IPassengerTransportation <|.. AirBus
class AirBus {
+ Boarding() : void
+ Unboarding() : void
}

AirTransport <|-- CargoPlane
ICargoTransportation <|.. CargoPlane
class CargoPlane {
+ Loading() : void
+ Unloading() : void
}

@enduml